Navbar spacing issue on small devices (ie. iPhone SE) resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ background-color: #cccccc;
 border-color: black;
 border-style: double;
 color: white;
-padding: 10px 20px;
+padding: 10px 7px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
